--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,7 +35,7 @@
   },
   "DETAIL": {
     "TITLE": "Detail",
-    "CLOSE": "close",
+    "CLOSE": "Close",
     "UNIT": "Yuan/Per",
     "INCLUDE": "Package Include",
     "FEATURE": "Package Feature",
